--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,18 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# any custom documentation
-docs/
-
 # Environment variables
 .env
 .env.local
 .env*.local
+env.local
+
+# Configuration with sensitive IDs
+channel-config.json
+
+# Documentation - keep folder, exclude contents
+docs/*
+!docs/.gitkeep
 
 # macOS
 .DS_Store
