--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ env.local
 
 # Configuration with sensitive IDs
 channel-config.json
+user-preferences.json
 
 # Documentation - keep folder, exclude contents
 docs/pingone-protect-internal
