initial channel admin configuration

--- a/env.example
+++ b/env.example
@@ -14,3 +14,7 @@ OPENAI_API_KEY=sk-your-open-ai-api-key
 ## Slack
 SLACK_BOT_TOKEN=your-slack-bot-token
 SLACK_SIGNING_SECRET=your-slack-signing-secret
+
+# Admin users who can configure channels (comma-separated Slack user IDs)
+# Example: ADMIN_USERS=U01234ABCDE,U56789FGHIJ
+ADMIN_USERS=
