--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dasilva",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "description": "product champion",
   "main": "app.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "dependencies": {
     "@slack/web-api": "^7.13.0",
     "@xenova/transformers": "^2.17.1",
+    "axios": "^1.7.0",
     "dotenv": "^16.4.5",
     "eslint": "^9.39.2",
     "express": "^5.2.1",
