clean up environment examples; added SILENT_MODE

--- a/env.example
+++ b/env.example
@@ -1,20 +1,23 @@
+## node configuration
+
 PORT=3000
 DEBUG_MODE=false
-RESPONSE_COOLDOWN_SECONDS=300 # prevent too many messages to same user
 
-# break up the source docs to reduce delivery w/ LLM
-CHUNK_SIZE=3000      # Characters per chunk
-MAX_CHUNKS=8         # Number of chunks to send to AI
+## bot configuration
 
-## OpenAI
-MODEL=gpt-5-mini    # gpt-5-nano gpt-5-mini
-MAX_COMPLETION_TOKENS=4000 # limit gpt token size
-OPENAI_API_KEY=sk-your-open-ai-api-key
+SILENT_MODE=true                    # when in silent mode, users must unsilence for ambient
+RESPONSE_COOLDOWN_SECONDS=300       # default ambient frequency per user
+ADMIN_USERS=                        # comma delimited Slack IDs (ADMIN_USERS=U01234ABCDE,U56789FGHIJ)
 
-## Slack
+## OpenAI Configuration
+
+CHUNK_SIZE=3000                     # Size of document chunks; increase for more fidelity
+MAX_CHUNKS=8                        # Number of document chunks; increase for more fidelity
+MAX_COMPLETION_TOKENS=4000          # limit gpt token size as cost backstop
+MODEL=gpt-5-mini                    # gpt-5-nano gpt-5-mini
+OPENAI_API_KEY=your-openai-key
+
+## Slack Configuration
+
 SLACK_BOT_TOKEN=your-slack-bot-token
 SLACK_SIGNING_SECRET=your-slack-signing-secret
-
-# Admin users who can configure channels (comma-separated Slack user IDs)
-# Example: ADMIN_USERS=U01234ABCDE,U56789FGHIJ
-ADMIN_USERS=
