Added opt in ambient mode as default

--- a/env.example
+++ b/env.example
@@ -5,7 +5,7 @@ DEBUG_MODE=false
 
 ## bot configuration
 
-SILENT_MODE=true                    # when in silent mode, users must unsilence for ambient
+AMBIENT_MODE=false                  # when ambient mode false, users must unsilence for ambient
 RESPONSE_COOLDOWN_SECONDS=300       # default ambient frequency per user
 ADMIN_USERS=                        # comma delimited Slack IDs (ADMIN_USERS=U01234ABCDE,U56789FGHIJ)
 
