--- a/env.example
+++ b/env.example
@@ -8,6 +8,7 @@ DEBUG_MODE=false
 AMBIENT_MODE=false                  # when ambient mode false, users must unsilence for ambient
 RESPONSE_COOLDOWN_SECONDS=300       # default ambient frequency per user
 ADMIN_USERS=                        # comma delimited Slack IDs (ADMIN_USERS=U01234ABCDE,U56789FGHIJ)
+PERSISTENT_STORAGE=                 # where to store files that persist between deployments
 
 ## OpenAI Configuration
 
