renamed a file to exclude

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ yarn-error.log*
 # Local work tasks
 
 todo.md
-/sample-docs/dasilva.md
+/sample-docs/dasilva-product-champion.md
 
 # Environment variables
 .env
