added optional LOG_CHANNEL destination for console logs

--- a/env.example
+++ b/env.example
@@ -9,6 +9,7 @@ AMBIENT_MODE=false                  # when ambient mode false, users must unsile
 RESPONSE_COOLDOWN_SECONDS=300       # default ambient frequency per user
 ADMIN_USERS=                        # comma delimited Slack IDs (ADMIN_USERS=U01234ABCDE,U56789FGHIJ)
 PERSISTENT_STORAGE=                 # where to store files that persist between deployments
+LOG_CHANNEL=                        # Slack channel ID to receive copies of log messages
 
 ## OpenAI Configuration
 
