--- a/env.example
+++ b/env.example
@@ -9,7 +9,8 @@ AMBIENT_MODE=false                  # when ambient mode false, users must unsile
 RESPONSE_COOLDOWN_SECONDS=300       # default ambient frequency per user
 ADMIN_USERS=                        # comma delimited Slack IDs (ADMIN_USERS=U01234ABCDE,U56789FGHIJ)
 PERSISTENT_STORAGE=                 # where to store files that persist between deployments
-LOG_CHANNEL=                        # Slack channel ID to receive copies of log messages
+FEEDBACK_EMOJI=feedback             # emoji name (no colons) that triggers feedback on bot messages
+FEEDBACK_CHANNEL=                   # Slack channel ID to receive user feedback on bot responses
 
 ## OpenAI Configuration
 
