--- a/env.example
+++ b/env.example
@@ -7,6 +7,7 @@ DEBUG_MODE=false
 
 AMBIENT_MODE=false                  # when ambient mode false, users must unsilence for ambient
 RESPONSE_COOLDOWN_SECONDS=300       # default ambient frequency per user
+AMBIENT_MIN_SCORE=0.3               # minimum chunk similarity score for ambient responses (0.0-1.0)
 ADMIN_USERS=                        # comma delimited Slack IDs (ADMIN_USERS=U01234ABCDE,U56789FGHIJ)
 PERSISTENT_STORAGE=                 # where to store files that persist between deployments
 FEEDBACK_EMOJI=feedback             # emoji name (no colons) that triggers feedback on bot messages
