improvements to response fidelity via chunk overlap and expansion

--- a/env.example
+++ b/env.example
@@ -15,8 +15,9 @@ FEEDBACK_CHANNEL=                   # Slack channel ID to receive user feedback 
 
 ## OpenAI Configuration
 
-CHUNK_SIZE=3000                     # Size of document chunks; increase for more fidelity
-MAX_CHUNKS=8                        # Number of document chunks; increase for more fidelity
+CHUNK_SIZE=1200                     # Size of document chunks in characters
+CHUNK_OVERLAP=0.15                  # Fraction of chunk size to overlap between chunks (0.0-0.5)
+MAX_CHUNKS=12                        # Number of top chunks to retrieve (neighbors expand this)
 MAX_COMPLETION_TOKENS=4000          # limit gpt token size as cost backstop
 MODEL=gpt-5-mini                    # gpt-5-nano gpt-5-mini
 OPENAI_API_KEY=your-openai-key
