--- a/env.example
+++ b/env.example
@@ -7,7 +7,7 @@ DEBUG_MODE=false
 
 AMBIENT_MODE=false                  # when ambient mode false, users must unsilence for ambient
 RESPONSE_COOLDOWN_SECONDS=300       # default ambient frequency per user
-ADMIN_USERS=                        # comma delimited Slack IDs (ADMIN_USERS=U01234ABCDE,U56789FGHIJ)
+GLOBAL_ADMINS=                        # comma delimited Slack IDs (GLOBAL_ADMINS=U01234ABCDE,U56789FGHIJ)
 PERSISTENT_STORAGE=                 # where to store files that persist between deployments
 FEEDBACK_EMOJI=feedback             # emoji name (no colons) that triggers feedback on bot messages
 FEEDBACK_CHANNEL=                   # Slack channel ID to receive user feedback on bot responses
