reorg code base, split into helper files; rewrote logger

--- a/env.example
+++ b/env.example
@@ -1,13 +1,14 @@
 ## node configuration
 
 PORT=3000
-DEBUG_MODE=false
+LOG_LEVEL=INFO                      # DEBUG, INFO, WARN, ERROR
 
 ## bot configuration
 
 AMBIENT_MODE=false                  # when ambient mode false, users must unsilence for ambient
-RESPONSE_COOLDOWN_SECONDS=300       # default ambient frequency per user
-GLOBAL_ADMINS=                        # comma delimited Slack IDs (GLOBAL_ADMINS=U01234ABCDE,U56789FGHIJ)
+RESPONSE_COOLDOWN_SECONDS=60        # default ambient frequency per user
+THREAD_CONTEXT_MESSAGES=10          # number of thread history messages to include in context
+GLOBAL_ADMINS=                      # comma delimited Slack IDs (GLOBAL_ADMINS=U01234ABCDE,U56789FGHIJ)
 PERSISTENT_STORAGE=                 # where to store files that persist between deployments
 FEEDBACK_EMOJI=feedback             # emoji name (no colons) that triggers feedback on bot messages
 FEEDBACK_CHANNEL=                   # Slack channel ID to receive user feedback on bot responses
