--- a/env.example
+++ b/env.example
@@ -17,7 +17,8 @@ FEEDBACK_CHANNEL=                   # Slack channel ID to receive user feedback 
 
 MAX_COMPLETION_TOKENS=4000          # limit gpt token size as cost backstop
 MODEL=gpt-5-mini                    # gpt-5-nano gpt-5-mini
-OPENAI_API_TIMEOUT=90000            # number of milliseconds to wait for api response
+OPENAI_API_TIMEOUT=30000            # number of milliseconds to wait for api response
+OPENAI_API_RETRIES=1                # number of times to retry openAI
 OPENAI_API_KEY=your-openai-key
 
 ## Slack Configuration
