added redis for tracking active threads

--- a/env.example
+++ b/env.example
@@ -25,3 +25,9 @@ OPENAI_API_KEY=your-openai-key
 
 SLACK_BOT_TOKEN=your-slack-bot-token
 SLACK_SIGNING_SECRET=your-slack-signing-secret
+
+## Redis Configuration
+
+REDIS_URL=redis://localhost:6379   # Redis connection URL (redis://host:port or rediss:// for TLS)
+REDIS_KEY_PREFIX=dasilva:          # Prefix for all Redis keys
+ACTIVE_THREAD_TTL_SECONDS=7200     # Thread TTL in seconds (default: 2 hours)
