--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.5",
     "eslint": "^9.39.2",
     "express": "^5.2.1",
-    "openai": "^6.16.0"
+    "openai": "^6.16.0",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
